# gradation

./: .gitignore  CMakeLists.txt  README.md  gradation.dsp
.github/workflows/: cmake.yml
Source/: gradation.cpp  gradation.h  gradation.rc  main.cpp  resource.h  vd.cpp
include/avisynth/: avisynth.h
include/vd2/OldFilterSDK/: ScriptValue.h
include/vd2/VDXFrame/: Unknown.h  VideoFilterEntry.h
include/vd2/plugin/: vdinputdriver.h  vdplugin.h  vdvideofilt.h
source/: avs.cpp  avs.h  gradation.cpp  gradation.h  util.h  vd.cpp
test/: gradation.test.cpp  test.h
